force-app/main/default/objects/sked__Job_Contact__c/sked__Job_Contact__c.object-meta.xml
<CustomObject>
    <description>A junction object between a job and a contact</description>
    <label>Job Contact</label>
    <nameField>
        <displayFormat>JC-{00000}</displayFormat>
        <label>Job Contact Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job Contacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>