force-app/main/default/objects/sked__Job_Contact__c/fields/sked__Contact__c.field-meta.xml
<CustomField>
    <fullName>sked__Contact__c</fullName>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Job Contacts</relationshipLabel>
    <relationshipName>Job_Contacts</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>