force-app/main/default/objects/sked__Job_Contact__c/fields/sked__Role__c.field-meta.xml
<CustomField>
    <fullName>sked__Role__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Manager</fullName>
            </value>
            <value>
                <fullName>Site Manager</fullName>
            </value>
            <value>
                <fullName>Safety Office</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>